2013-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.900.7
	* inst/NEWS: Release 0.3.900.7
	* inst/include/*: Upgraded to new release 3.900.7 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runTests.R: No longer need to test minimal versions
	of package 'inline' as unit tests now use Rcpp attributes
	* inst/unitTests/runit.RcppArmadillo.R: Don't load package 'library'

	* inst/examples/fastLm.r: Also rewritten to use Rcpp attributes
	* inst/examples/varSimulation.r: Idem

	* DESCRIPTION: Removed Suggests: on inline

2013-06-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.900.0
	* inst/NEWS: Release 0.3.900.0
	* inst/include/*: Upgraded to new release 3.900.0 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/kalman/benchmark.R: Switch from inline to sourceCpp
	* inst/examples/kalman/Kalman.cpp: Added Rcpp attributes function
	* inst/examples/kalman/KalmanCpp.R: Retired, no longer used

2013-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.820
	* inst/NEWS: Release 0.3.820
	* inst/include/*: Upgraded to new release 3.820 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-04-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.810.2
	* inst/NEWS: Release 0.3.810.2
	* inst/include/*: Upgraded to new release 3.810.2 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.3.810.0
	* inst/NEWS: Release 0.3.810.0
	* inst/include/*: Upgraded to new release 3.810.0 of Armadillo
        * debian/*: Similarly updated for new release to Debian

2013-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* debian/: Package will be added to Debian as well
