@@ -2,7 +2,7 @@
 //
 // Mat_meat.h: Rcpp/Armadillo glue
 //
-// Copyright (C)  2010 - 2012  Dirk Eddelbuettel, Romain Francois and Douglas Bates
+// Copyright (C)  2010 - 2013  Dirk Eddelbuettel, Romain Francois and Douglas Bates
 //
 // This file is part of RcppArmadillo.
 //
