@@ -1,3 +1,9 @@
+2013-08-02 Romain Francois <romain@r-enthusiasts.com>
+
+        * include/RcppArmadillo/Row_meat.h : set vec_state correctly
+        * include/RcppArmadillo/Col_meat.h : set vec_state correctly
+        * include/RcppArmadillo/Mat_meat.h : set vec_state correctly
+        
 2013-07-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.3.900.7
